@@ -2160,6 +2160,235 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|/**      * test that custom similarity is in effect when using MultiSearcher (LUCENE-789).      * @throws IOException       */
+DECL|method|testCustomSimilarity
+specifier|public
+name|void
+name|testCustomSimilarity
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|RAMDirectory
+name|dir
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+name|initIndex
+argument_list|(
+name|dir
+argument_list|,
+literal|10
+argument_list|,
+literal|true
+argument_list|,
+literal|"x"
+argument_list|)
+expr_stmt|;
+comment|// documents with two tokens "doc0" and "x", "doc1" and x, etc...
+name|IndexSearcher
+name|srchr
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|MultiSearcher
+name|msrchr
+init|=
+name|getMultiSearcherInstance
+argument_list|(
+operator|new
+name|Searcher
+index|[]
+block|{
+name|srchr
+block|}
+argument_list|)
+decl_stmt|;
+name|Similarity
+name|customSimilarity
+init|=
+operator|new
+name|DefaultSimilarity
+argument_list|()
+block|{
+comment|// overide all
+specifier|public
+name|float
+name|idf
+parameter_list|(
+name|int
+name|docFreq
+parameter_list|,
+name|int
+name|numDocs
+parameter_list|)
+block|{
+return|return
+literal|100.0f
+return|;
+block|}
+specifier|public
+name|float
+name|coord
+parameter_list|(
+name|int
+name|overlap
+parameter_list|,
+name|int
+name|maxOverlap
+parameter_list|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+specifier|public
+name|float
+name|lengthNorm
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
+name|int
+name|numTokens
+parameter_list|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+specifier|public
+name|float
+name|queryNorm
+parameter_list|(
+name|float
+name|sumOfSquaredWeights
+parameter_list|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+specifier|public
+name|float
+name|sloppyFreq
+parameter_list|(
+name|int
+name|distance
+parameter_list|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+specifier|public
+name|float
+name|tf
+parameter_list|(
+name|float
+name|freq
+parameter_list|)
+block|{
+return|return
+literal|1.0f
+return|;
+block|}
+block|}
+decl_stmt|;
+name|srchr
+operator|.
+name|setSimilarity
+argument_list|(
+name|customSimilarity
+argument_list|)
+expr_stmt|;
+name|msrchr
+operator|.
+name|setSimilarity
+argument_list|(
+name|customSimilarity
+argument_list|)
+expr_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"contents"
+argument_list|,
+literal|"doc0"
+argument_list|)
+argument_list|)
+decl_stmt|;
+comment|// Get a score from IndexSearcher
+name|TopDocs
+name|topDocs
+init|=
+name|srchr
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|float
+name|score1
+init|=
+name|topDocs
+operator|.
+name|getMaxScore
+argument_list|()
+decl_stmt|;
+comment|// Get the score from MultiSearcher
+name|topDocs
+operator|=
+name|msrchr
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|float
+name|scoreN
+init|=
+name|topDocs
+operator|.
+name|getMaxScore
+argument_list|()
+decl_stmt|;
+comment|// The scores from the IndexSearcher and Multisearcher should be the same
+comment|// if the same similarity is used.
+name|assertEquals
+argument_list|(
+literal|"MultiSearcher score must be equal to single esrcher score!"
+argument_list|,
+name|score1
+argument_list|,
+name|scoreN
+argument_list|,
+literal|1e-6
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
